# DebateHelper

./: .env.example  .gitignore  README.md  README_zh.md  demo.html  demo.py  live.html  pyproject.toml
debate_engine/: __init__.py  __main__.py  cli.py  context_history.py  engine.py  i18n.py
debate_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
debate_engine/agents/: __init__.py  analyst.py  copywriter.py  logician.py  tactician.py
tests/: test_all.py
